--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <li>1.6 - <abbr title="Rosquinha">Donut</abbr></li>
         <li>3.0 - <abbr title="Bomba">Eclair</abbr></li>
         <li>2.2 - <abbr title="Iorgute Congelado">Froyo</abbr></li>
-        <li>2.3 - <abbr title="Biscoito de Gengibre">Gingerbrea</abbr></li>d
+        <li>2.3 - <abbr title="Biscoito de Gengibre">Gingerbrea</abbr></li>
         <li>3.0 - <abbr title="Favo de Mel">Honeycomb</abbr></li>
         <li>4.0 - <abbr title="Sanduiche de Sorvete">Ice Cream</abbr> </li>Sandwich
         <li>4.1 - <abbr title="Jujuba">Jelly Bean</abbr></li>
